added the map page, tweaked css

--- a/css/style.css
+++ b/css/style.css
@@ -279,5 +279,7 @@ li {
   transition-timing-function: ease-out;
   filter: drop-shadow(3px 6px 9px #8b18ef96);
 }
+
+/* css for the map page*/
  
 
