--- a/css/style.css
+++ b/css/style.css
@@ -281,5 +281,10 @@ li {
 }
 
 /* css for the map page*/
+
+#map_background {
+  background-image: url(../media/);
+  background-size: cover;
+}
  
 
