added map background image

--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ li {
 /* css for the map page*/
 
 #map_background {
-  background-image: url(../media/);
+  background-image: url(../media/map_background1.jpg);
   background-size: cover;
 }
  
