tried adding a sample map again

--- a/css/style.css
+++ b/css/style.css
@@ -286,5 +286,15 @@ li {
   background-image: url(../media/map_background1.jpg);
   background-size: cover;
 }
+
+/* 
+ * Always set the map height explicitly to define the size of the div element
+ * that contains the map. 
+ */
+ #map {
+  height: 100%;
+}
+
+
  
 
