--- a/css/style.css
+++ b/css/style.css
@@ -287,12 +287,10 @@ li {
   background-size: cover;
 }
 
-/* 
- * Always set the map height explicitly to define the size of the div element
- * that contains the map. 
- */
- #map {
-  height: 100%;
+#map {
+  height: 500px;
+  width: 50%;
+  margin: auto;
 }
 
 
