--- a/css/style.css
+++ b/css/style.css
@@ -332,5 +332,15 @@ li {
   background-size: cover;
 }
 
+/*css for media queries*/
+
+/* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  #nav a {
+    float: none;
+    width: 100%;
+  }
+}
+
  
 
