--- a/css/style.css
+++ b/css/style.css
@@ -336,7 +336,7 @@ li {
 
 /* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-  #nav a {
+  #nav-contain a {
     float: none;
     width: 100%;
   }
