nav bar in rpogress

--- a/css/style.css
+++ b/css/style.css
@@ -305,11 +305,13 @@ li {
 
 /* Style the topnav links */
 .topnav a {
+  float: left;
   display: block;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  margin: auto;
 }
 
 /* Change color on hover */
