--- a/css/style.css
+++ b/css/style.css
@@ -300,17 +300,19 @@ li {
 /* Style the top navigation bar */
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: rgb(192, 99, 193, 0.75);
 }
 
 /* Style the topnav links */
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
   text-align: justify;
-  padding: 14px 16px;
   text-decoration: none;
+  font-family: 'Press Start 2P';
+  color: #431d65;
+  font-size: medium;
+  padding: 10px 20px;
 }
 
 /* Change color on hover */
