--- a/css/style.css
+++ b/css/style.css
@@ -341,6 +341,22 @@ li {
 
 /* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
+
+  #nav-contain {
+    float: none;
+    width: 100%;
+  }
+
+  #nav ul {
+    float: none;
+    width: 100%;
+  }
+
+  #nav ul li {
+    float: none;
+    width: 100%;
+  }
+
   #nav ul li a {
     float: none;
     width: 100%;
