--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 }
 
 .wrapper {
+  width: 920px;
   background-color: rgba(255, 255, 255, 0.5);
   border-style: inset;
   border-color: rgb(119, 21, 199);
@@ -316,19 +317,6 @@ li {
 
   #nav ul li a {
     float: none;
-    width: 100%;
-  }
-}
-
-/* Create four equal columns that floats next to each other */
-.wrapper {
-  float: left;
-  width: 50%;
-}
-
-/* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .wrapper {
     width: 100%;
   }
 }
