--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   background-color: rgba(255, 255, 255, 0.5);
   border-style: inset;
   border-color: rgb(119, 21, 199);
-  margin: 20% auto 20% auto;
+  margin: 20% 20px 20% 20px;
   padding: 10px;
   padding-left: 5px;
   padding-right: 5px;
