--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body {
   background-color: rgb(192, 99, 193);
-  align-items: center;
+    align-items: center;
   justify-content: center;
 }
 
@@ -15,7 +15,7 @@ body {
   background-color: rgba(255, 255, 255, 0.5);
   border-style: inset;
   border-color: rgb(119, 21, 199);
-  margin: 20% 20px 20% 20px;
+  margin: 20% auto 20% auto;
   padding: 10px;
   padding-left: 5px;
   padding-right: 5px;
