--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .wrapper {
-  width: 950px;
+  width: 60%;
   background-color: rgba(255, 255, 255, 0.5);
   border-style: inset;
   border-color: rgb(119, 21, 199);
@@ -22,6 +22,7 @@ body {
   padding-right: 5px;
   align-items: center;
   justify-content: center;
+  box-sizing: border-box;
 }
 
 h1 {
