--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   background-color: rgba(255, 255, 255, 0.5);
   border-style: inset;
   border-color: rgb(119, 21, 199);
-  margin: 10%;
+  margin: auto;
   padding: 20px;
   align-items: center;
   justify-content: center;
