--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ li {
 /* css for mobile friendly pages */
 
 /* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) and (orientation: landscape){
+@media screen and (max-width: 600px) or (orientation: landscape){
 
   #nav-contain {
     float: none;
