changed street art wrapper settings

--- a/css/style.css
+++ b/css/style.css
@@ -200,14 +200,15 @@ li {
 }
 
 .streert_art_wrapper {
-  width: 950px;
+  width: 80%;
   background-color: rgba(0, 0, 0, 0.5);
   border-style: inset;
   border-color: #d0a4f6;
-  margin: 25px auto 25px auto;
-  padding: 10px;
-  padding-left: 5px;
-  padding-right: 5px;
+  margin: auto;
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
   filter: drop-shadow(3px 6px 9px #8b18ef96);
   box-shadow: 0 0 15px #d0a4f6, 0 0 25px #ac5bf2, 0 0 35px #8a18ef;
 }
