--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,7 @@ li {
   border-style: inset;
   border-color: #d0a4f6;
   margin: auto;
+  margin-top: 15px;
   padding: 20px;
   align-items: center;
   justify-content: center;
