changed media query menu settigns

--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,8 @@ li {
   #nav-contain {
     float: none;
     width: 100%;
+    align-items: center;
+    justify-content: center;
   }
 
   #nav ul {
