--- a/css/style.css
+++ b/css/style.css
@@ -329,6 +329,8 @@ li {
   #nav ul li a {
     float: none;
     width: 100%;
+    align-items: center;
+    justify-content: center;
   }
 
   .wrapper {
