--- a/css/style.css
+++ b/css/style.css
@@ -317,6 +317,7 @@ li {
     width: 100%;
     align-items: center;
     justify-content: center;
+    text-align: center;
   }
 
   #nav ul li {
@@ -324,6 +325,7 @@ li {
     width: 100%;
     align-items: center;
     justify-content: center;
+    text-align: center;
   }
 
   #nav ul li a {
@@ -331,6 +333,7 @@ li {
     width: 100%;
     align-items: center;
     justify-content: center;
+    text-align: center;
   }
 
   .wrapper {
