--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ li {
 @media screen and (max-width: 600px){
 
   h1, h2, h3, h4, h5 {
-    font-size: medium;
+    font-size: large;
   }
 
   p {
