--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,7 @@ li {
 
 .neonText {
   font-family: 'Neonderthaw';
+  font-size: larger;
   text-align: center;
   color: #f1e7fa;
   text-shadow: 0 0 15px #d0a4f6, 0 0 25px #ac5bf2, 0 0 35px #8a18ef;
