--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ body {
 h1, h2, h3, h4, h5 {
   font-family: 'Press Start 2P';
   text-align: center;
+  color: #431d65;
+  font-size: larger;
 }
 
 p {
