--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,11 @@ li {
 /* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px){
 
-  h1, h2, h3, h4, h5 {
+  h1 {
+    font-size: 2em;
+  }
+
+  h2, h3, h4, h5 {
     font-size: 1em;
   }
 
