--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ li {
 
 #map {
   height: 500px;
-  width: 50%;
+  width: auto;
   margin: auto;
   margin-bottom: 20px;
   filter: drop-shadow(15px 20px 0px #4560c4);
@@ -363,7 +363,7 @@ li {
   }
 
   #map {
-    width: 90%;
+    width: 95%;
     margin: auto;
     margin-bottom: 20px;
     filter: drop-shadow(15px 20px 0px #4560c4);
