--- a/css/style.css
+++ b/css/style.css
@@ -364,6 +364,7 @@ li {
 
   #map {
     width: 95%;
+    height: auto;
     margin: auto;
     margin-bottom: 20px;
     filter: drop-shadow(15px 20px 0px #4560c4);
