--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 
 .wrapper {
   width: 70%;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.65);
   border-style: inset;
   border-color: rgb(119, 21, 199);
   margin: auto;
@@ -41,7 +41,7 @@ li {
 }
 
 #nav {
-  background-color: rgb(192, 99, 193, 0.75);
+  background-color: rgb(192, 99, 193, 0.85);
   overflow: hidden;
 }
   
@@ -101,7 +101,7 @@ li {
 /*css for the Welcome page*/
 
 #welcome_background {
-  background-image: url(../media/welcome_background2.jpg);
+  background-image: url(../media/backgrounds/welcome_background2.jpg);
   background-size: cover;
 }
 
@@ -111,7 +111,6 @@ li {
   position: relative;
   margin: 25px;
   margin-left: 15px;
-  /*filter: drop-shadow(15px 15px 0px #a869de);*/
   filter: drop-shadow(15px 20px 0px #9b67c8);
   transition: height 0.5s, width 0.5s;
 }
@@ -168,7 +167,7 @@ li {
 /*css for the Resume page*/
 
 #resume_background {
-  background-image: url(../media/resume_background3.jpg);
+  background-image: url(../media/backgrounds/resume_background3.jpg);
   background-size: cover;
 }
 
@@ -193,7 +192,7 @@ li {
 /*css for the Chicago Street Art page*/
 
 #streetart_background {
-  background-image: url(../media/street_art_background.jpg);
+  background-image: url(../media/backgrounds/street_art_background.jpg);
   background-size: cover;
 }
 
@@ -285,7 +284,7 @@ li {
 /* css for the map page*/
 
 #map_background {
-  background-image: url(../media/map_background1.jpg);
+  background-image: url(../media/backgrounds/test_background.jpg);
   background-size: cover;
 }
 
@@ -294,7 +293,7 @@ li {
   width: 500px;
   margin: auto;
   margin-bottom: 20px;
-  filter: drop-shadow(15px 20px 0px #4560c4);
+  filter: drop-shadow(15px 20px 0px #9b67c8);
 }
 
 /* css for mobile friendly pages */
@@ -332,30 +331,16 @@ li {
 
   .wrapper {
     width: 90%;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-style: inset;
-    border-color: rgb(119, 21, 199);
     margin: auto;
     margin-top: 30px;
     padding: 10px;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
   }
 
   .streert_art_wrapper {
     width: 90%;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-style: inset;
-    border-color: #d0a4f6;
     margin: auto;
     margin-top: 30px;
     padding: 10px;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-    filter: drop-shadow(3px 6px 9px #8b18ef96);
-    box-shadow: 0 0 15px #d0a4f6, 0 0 25px #ac5bf2, 0 0 35px #8a18ef;
   }
 
   .neonText {
@@ -366,8 +351,32 @@ li {
     width: 90%;
     margin: auto;
     margin-bottom: 20px;
-    filter: drop-shadow(15px 20px 0px #4560c4);
   }
+
+  .row {
+    display: block;
+    justify-content: center;
+    text-align: center; 
+  }
+
+  .welcome_img {
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: center;
+  }
+
+  #cat1 {
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: center;
+  }
+
+  #cat2 {
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: center;
+  }
+
 }
 
  
